--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "nodemon src/index.js",
+    "start:ci": "node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "nodemon": "^2.0.7",
     "prisma": "^2.20.1"
   }
 }
