--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "graphql": "^15.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "subscriptions-transport-ws": "^0.9.18",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
