--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@prisma/client": "^2.20.1",
     "apollo-server": "^2.22.2",
+    "apollo-server-express": "^2.22.2",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "graphql": "^15.5.0",
-    "jsonwebtoken": "^8.5.1"
+    "http": "*",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
