--- a/backend-apollo/package.json
+++ b/backend-apollo/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "migrate:dev": "sh check-db.sh",
     "start": "nodemon src/index.js",
     "start:ci": "node src/index.js"
   },
@@ -24,6 +25,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
-    "prisma": "^2.20.1"
+    "prisma": "^2.23.0"
   }
 }
